--- a/CM 1015 Computational Mathematics/index.Rmd
+++ b/CM 1015 Computational Mathematics/index.Rmd
@@ -1,10 +1,10 @@
 --- 
 title: "CM 1015 Computational Mathematics"
-author: "John Doe"
+author: "Kevin Juandi"
 date: "`r Sys.Date()`"
-output:
-  html_document:
-    df_print: paged
+output: 
+  bookdown::gitbook
+  bookdown::pdf_book
 documentclass: book
 bibliography:
 - book.bib
