fml, layoffs here

--- a/CM 1015 Computational Mathematics/01-number-bases.Rmd
+++ b/CM 1015 Computational Mathematics/01-number-bases.Rmd
@@ -135,7 +135,7 @@ The reverse is much simpler.
 \end{split}
 \end{equation} 
 
-### Operations with Binary Number
+## Operations with Binary Number
 
 **Addition**
 
